# agusta

./: .gitignore  commands.ipynb  requirements.txt  test_dataloader.py  test_preload.py  train_cv.sh
codebase-analysis-docs/: CODEBASE_KNOWLEDGE.md
docs/: brainflow_architecture.md  brainflow_concepts.md
notebooks/: wavelet_denoising_analysis.ipynb
scripts/: create_dummy_submission.py  download_features.py  extract_all_vlm2vec.sh  (+4 more)
src/models/VIBE/: .gitignore  LICENSE  README.md  pyproject.toml
src/models/VIBE/.github/workflows/: ruff.yaml
src/models/VIBE/configs/: features_default.yaml  features_model1.yaml  features_model1_fr.yaml  features_model2.yaml  merge_plan_ood.yaml  merge_plan_s07.yaml  params_default.yaml  params_model1.yaml  params_model2.yaml  params_visual.yaml  sweep.yaml
src/models/VIBE/features/: align_feat.py  novelty.py
src/models/VIBE/features/BEATs-Feature-Extraction/: extract_audio_BEATs.py  main.py  pyproject.toml  slurm.sh
src/models/VIBE/features/LaBSE/: extract_labse.py
src/models/VIBE/features/VJEPA2/: batch_extract.sh  get_vjepa_ac_features.py
src/models/VIBE/features/audio/: audio_io.py  extract_mono_stereo_features.py  extract_mtf.sh  mtf.py
src/models/VIBE/features/omni_and_slowfast/: extract_audio_features_whisperV3.py  extract_audio_wav2vec.py  extract_omni7B_features.py  extract_omni_features.py  extract_slowfast_r101_features.py  main.py  omni_3B_longer_context.py  pyproject.toml  slurm.sh  slurm_7B.sh  slurm_omni_longer_context.sh  slurm_slowfast.sh  slurm_whisper.sh
src/models/VIBE/features/qwen_text/: extract_72B_full_context.py  extract_7B_full_context.py  extract_7B_full_context_emotions.py  extract_text_features.py  main.py  pyproject.toml  script.sh
src/models/VIBE/features/video/: extract_gabor.sh  extract_ps.sh  extract_saliency.sh  gabor.py  ps.py  saliency.py  video_io.py
src/models/VIBE/features/video-depth/: app.py  extract_features.py  main.py  pyproject.toml  slurm.sh
src/models/VIBE/features/video-depth/benchmark/dataset_extract/: dataset_extract_bonn.py  dataset_extract_kitti.py  dataset_extract_nyuv2.py  dataset_extract_scannet.py  dataset_extract_sintel.py
src/models/VIBE/features/video-depth/benchmark/eval/: eval.py  eval_tae.py
src/models/VIBE/features/video-depth/benchmark/infer/: infer.py
src/models/VIBE/features/video-depth/metric_depth/: depth_to_pointcloud.py
src/models/VIBE/features/video-depth/metric_depth/video_depth_anything/: video_depth.py
src/models/VIBE/features/video-depth/video_depth_anything/: video_depth.py
src/models/VIBE/scripts/: env.sh.example  fit.sh  fit_all.sh  merge_all.sh  retrain.sh  submit.sh  submit_all.sh  sweep.sh  train.sh
src/models/VIBE/vibe/: __init__.py
src/models/VIBE/vibe/cli/: __init__.py  ensemble_of_ensembles.py  fit.py  generate_loss_masks.py  merging.py  retrain.py  submit.py  train.py
src/models/VIBE/vibe/dataset/: __init__.py  data.py  loader.py
src/models/VIBE/vibe/models/: __init__.py  ensemble.py  fmri.py  rope.py  utils.py
src/models/VIBE/vibe/training/: __init__.py  loop.py  losses.py  optim.py
src/models/VIBE/vibe/utils/: __init__.py  adjacency_matrices.py  config.py  feature_analysis.py  logger.py  utils.py  viz.py
(+148 files in other folders)
