[project]
name = "VIBE"
version = "0.1.0"
description = "Multimodal fMRI encoding model and training utilities (Algonauts 2025 — VIBE)"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Daniel C. Schad", email = "schad@cbs.mpg.de"},
    {name = "Shrey Dixit", email = "dixit@cbs.mpg.de"},
    {name = "Janis Keck", email = "keck@cbs.mpg.de"},
    {name = "Viktor Studenyak", email = "studenyak@cbs.mpg.de"},
]

keywords = ["fMRI", "multimodal", "brain decoding", "neuroscience", "machine learning"]

requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.8.1",
    "h5py>=3.13.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "labml-nn>=0.4.137",
    "matplotlib>=3.10.1",
    "nilearn<0.12.0",
    "numpy==1.26.4",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "transformers>=4.53.1",
    "wandb>=0.19.9",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.4",
]

[tool.setuptools]
packages = ["vibe"]

[tool.uv.workspace]
members = ["features/BEATs-Feature-Extraction"]

[project.scripts]
vibe-train   = "vibe.cli.train:main"
vibe-retrain = "vibe.cli.retrain:main"
vibe-fit     = "vibe.cli.fit:main"
vibe-submit  = "vibe.cli.submit:main"
vibe-merge   = "vibe.cli.merging:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage      = "https://github.com/Bicanski-NCG/VIBE"
Documentation = "https://github.com/Bicanski-NCG/VIBE#readme"
Source        = "https://github.com/Bicanski-NCG/VIBE"

[tool.setuptools.package-data]
"vibe" = ["py.typed"]
